# hass-light-sync

./: Cargo.toml  README.md  settings.json
.github/workflows/: release.yml
src/: main.rs
