[package]
name = "hass-light-sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
tokio = { version = "1.13.0", features = ["full"] }
captrs = "0.3.1"
reqwest = { version = "0.11.6", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }